--- a/index.html
+++ b/index.html
@@ -99,36 +99,43 @@
           <div class="owl-carousel owl-theme">
             <div class="item">
               <div class="project-info">
+                <a href="https://play.google.com/store/apps/details?id=com.elite.scanner" target="_blank">
+                  <img src="images/project/6.png" class="img-fluid" alt="project 6 image">
+                </a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="project-info">
                 <a href="https://play.google.com/store/apps/details?id=com.practice.gita" target="_blank">
-                  <img src="images/project/A.png" class="img-fluid" alt="project 1 image">
+                  <img src="images/project/5.png" class="img-fluid" alt="project 5 image">
                 </a>
               </div>
             </div>
             <div class="item">
               <div class="project-info">
                 <a href="https://play.google.com/store/apps/details?id=com.app.slidesum" target="_blank">
-                  <img src="images/project/B.png" class="img-fluid" alt="project 2 image">
+                  <img src="images/project/4.png" class="img-fluid" alt="project 4 image">
                 </a>
               </div>
             </div>
             <div class="item">
               <div class="project-info">
                 <a href="https://book-kart-app.netlify.app/" target="_blank">
-                  <img src="images/project/C.png" class="img-fluid" alt="project 3 image">
+                  <img src="images/project/3.png" class="img-fluid" alt="project 3 image">
                 </a>
               </div>
             </div>
             <div class="item">
               <div class="project-info">
                 <a href="https://play.google.com/store/apps/details?id=com.tanxe.brighter" target="_blank">
-                  <img src="images/project/D.png" class="img-fluid" alt="project 4 image">
+                  <img src="images/project/2.png" class="img-fluid" alt="project 2 image">
                 </a>
               </div>
             </div>
             <div class="item">
               <div class="project-info">
                 <a href="https://play.google.com/store/apps/details?id=com.client.mausam" target="_blank">
-                  <img src="images/project/E.png" class="img-fluid" alt="project 5 image">
+                  <img src="images/project/1.png" class="img-fluid" alt="project 1 image">
                 </a>
               </div>
             </div>
@@ -146,11 +153,21 @@
           <div class="timeline">
             <div class="timeline-wrapper">
               <div class="timeline-yr">
+                <span>2024</span>
+              </div>
+              <div class="timeline-info">
+                <h3><span>Software Engineer L2</span><small>Crest Infosystems, Surat</small></h3>
+                <p>June-2024 - Present</p> Skills: Android Development · Kotlin · Java · XML · Room database · SOAP ·
+                Retrofit · GraphQL · Pagination · POS systems · Barcode scanner
+              </div>
+            </div>
+            <div class="timeline-wrapper">
+              <div class="timeline-yr">
                 <span>2023</span>
               </div>
               <div class="timeline-info">
                 <h3><span>Android Development Intern</span><small>Crest Infosystems, Surat</small></h3>
-                <p>Dec 2023 - Present</p> Skills: Android Development · Kotlin · XML · Jetpack compose · MVVM · MVP ·
+                <p>Dec 2023 - June-2024</p> Skills: Android Development · Kotlin · XML · Jetpack compose · MVVM · MVP ·
                 Clean architecture · Advanced design patterns · Dagger & Hilt · Room database
               </div>
             </div>
